--- a/server/package.json
+++ b/server/package.json
@@ -2,10 +2,10 @@
   "name": "peekabookf",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "start": "node server/index.js",
-    "dev": "nodemon server/index.js"
+    "start": "node app.js",
+    "dev": "nodemon app.js"
   },
   "author": "Cabarron, Montejo, Sagarino, Torres",
   "license": "ISC",
